# rabbitmq-test

./: README.md  pyproject.toml
src/rabbitmq_api_feature/: loader.py  main.py
src/rabbitmq_api_feature/api/: router.py
src/rabbitmq_api_feature/consumers/: __init__.py  handlers.py
src/rabbitmq_api_feature/infrastructure/rabbitmq/: setup.py  utils.py
src/rabbitmq_api_feature/services/: dependencies.py
