[project]
name = "rabbitmq-api-feature"
version = "0.1.0"
description = ""
authors = [
    {name = "Fazliddin Abdurahimov",email = "fazliddin1801@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aio-pika (>=9.5.5,<10.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "orjson (>=3.10.18,<4.0.0)"
]

[tool.poetry]
packages = [{include = "rabbitmq_api_feature", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
